# openai-response.rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ResponseAPI.MD  example.sh  examples_advanced.sh
src/: lib.rs  main.rs
src/api/: client.rs  errors.rs  mod.rs  models.rs
src/cli/: args.rs  markdown.rs  mod.rs  output.rs
src/config/: env.rs
src/utils/: content.rs
tests/: api_errors.rs  api_models.rs  cli_args.rs  cli_markdown.rs  config_env.rs  utils_content.rs
